# EkataAuth

./: .gitignore  Dockerfile  Pipfile  README.md  emaillist.json  example.env  manage.py  pyproject.toml  requirements.txt  start-celery.sh  start-celerybeat.sh  uwsgi.ini
authhelper/: __init__.py  admin.py  apps.py  backends.py  models.py  pipeline.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  validators.py  views.py
authhelper/management/commands/: add_beta_scope.py  clean_up_disposable_accounts.py  create_invitation_report.py  get_disposable_email_accounts.py  migrate_email_list_users.py  migrate_useremails.py  migrate_users.py  send_credential_email.py  send_invite_to_baza.py
authhelper/migrations/: 0001_initial.py  0002_useremailvalidation.py  0003_resetpasswordtoken.py  0004_userprofile.py  0005_auto_20180719_2232.py  0006_useremail_email_type.py  0007_auto_20191203_2304.py  0008_userprofile_credential_email_sent.py  0009_userprofile_invited_to_baza.py  0010_auto_20230131_1918.py
authhelper/templates/: bazainvite.html  credentialemail.html  forgotpassword.html  validateemail.html
ekataauthserver/: celery.py  urls.py  wsgi.py
ekataauthserver/settings/: base.py  development.py  production.py
templates/: base_email_template.html  base_email_template_ekata_social.html
