[tool.poetry]
name = "ekataauth"
version = "0.4.0"
description = "Authentication backend for ekata and its products"
authors = ["Prasanta <prasantakakati1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "2.1.5"
djangorestframework = "3.9.0"
celery = "4.2.1"
redis = "3.0.1"
uwsgi = "2.0.17.1"
"django-rest-framework-social-oauth2" = "1.1.0"
"psycopg2-binary" = "2.7.6.1"
raven = "6.10.0"
"flake8" = "3.6.0"
django-mjml = "0.6.0"
tweepy = "3.7.0"
django-oauth-toolkit = "^1.2"

[tool.poetry.dev-dependencies]
"pep8" = "1.7.1"
"autopep8" = "1.3.5"
ipython = "6.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
